sass/data.scss
datum.narrow {
    margin-right: 17px;
}

datum.extrabottom {
    margin-right: 17px;
    margin-bottom: 40px;
}


datum.quad {
    margin-left:90px;
    margin-right: 130px;
    margin-bottom: 40px;
}

datum {
    display: inline-block;
    margin-right: 30px;
    border-collapse: collapse;
    vertical-align: top;
    margin-bottom: 15px;
    font-size: 14px;


    note {
        font-size:9px;
        display: inline-block;
    }

    .simplified::after {
        content: "*";
        position: relative;
        top: -7px;
        font-size: 12px;
    }

    name {
        font-size: 15px;
        text-align: left;
        display: block;
    }

    .nogrow {
        position: absolute;
    }

    .hidden {
        visibility: hidden;
    }


    visual {
        text-align: center;
        // background-color: salmon;
        background-color: #fafafa;
        border-style: solid;
        border-width: 1px;
        border-color: darkgray;
        border-radius: 5px;
        display: block;
        padding: 5px;
    }


    .bytes {
        background-color: lightgreen;
    }

    .char {
        background-color: sandybrown;
    }

    .sized {
        background-color: cyan;
    }

    .atomic {
        background-color: mediumseagreen;
    }

    .float {
        background-color: orchid;
    }

    .ptr {
        background-color: lightskyblue;
    }

    .any {
        background-color: salmon;
    }

    .cell {
        background-color: gold;
    }

    .celled {
        // background-color: gold;
        border-style: solid;
        box-sizing: border-box;
        border-width: 4px;
        border-color: gold;
        // box-shadow:0px 0px 0px 4px inset gold;
    }

    .enum {
        background-color: lightgoldenrodyellow;
    }

    .t {
        background-color: salmon;
        width: 30px;
    }

    .unsized::before {
        content: " ←";
        padding-left: 10px;
    }

    .unsized::after {
        content: "→ ";
        padding-right: 10px;
    }

    byte {
        display: inline-block;
        // background-color: mistyrose;
        border-style: dashed;
        border-width: 1px;
        border-color: black;
        border-radius: 5px;
        width: 15px;
        height: 28px;
    }

    byte.sign::after {
        content: "±";
        // display: block;
        position: relative;
        top: -6px;
        left: -3px;
        font-size: 10px;
    }

    zoom {
        background-color: #efefef;
        display: block;
        border-style: solid;
        border-width: 1px;
        border-color: gray;
        position: relative;
        text-align: center;
        width: 106%;
        left: -3%;
        top: -2px;
        z-index: -100;
        font-size: 12px;
    }

    memory-entry {
        display: inline-block;
        vertical-align: top;
        width: 100px;
    }

    memory-entry.double {
        width: 200px;
        position:relative;
        left:-40px;
    }

    memory-entry.quad {
        width: 375px;
        position:relative;
        left:-130px;
    }


    memory.extrapadding {
        padding-bottom: 15px;
    }

    memory {
        display: inline-block;
        padding: 5px;
        padding-bottom: 12px;
        font-size: 120%;
        text-align: center;
        position: relative;
        border-style: dashed;
        border-width: 1px;
        border-color: gray;
        width: 80%;
        left: 10%;
        top: 5px;
        z-index: 100;
        margin-bottom: 10px;
    }

    memory.heap {
        background-color: #c6dbe7;
    }

    memory.anymem {
        background-color: rgb(253, 236, 220);
    }

    memory.static {
        background-color: burlywood;
    }


    memory::before {
        content: "";
        display: block;
        position: absolute;
        top: -10px;
        left: 49%;
        border-style: solid;
        height: 7px;
        border-width: 1px;
        border-color: gray;
        z-index: -50;
    }

    memory.anymem::after {
        content: "(any mem)";
        display: block;
        position: absolute;
        bottom: 0px;
        right: 2px;
        font-size: 9px;
    }

    memory.heap::after {
        content: "(heap)";
        display: block;
        position: absolute;
        bottom: 0px;
        right: 2px;
        font-size: 9px;
    }


    memory.static::after {
        content: "(static)";
        display: block;
        position: absolute;
        bottom: 0px;
        right: 2px;
        font-size: 9px;
    }



    description {
        display: block;
        word-wrap: break-word;
        font-size: 10px;
    }


    pad {
        background-color: lightgreen;
        border-style: dotted;
        border-width: 1px;
        border-color: black;
    }

    andor {
        display: block;
        text-align: center;
        font-size: 10px;
    }

    framed {
        display: inline-block;
        border-style: solid;
        border-width: 1px;
        border-color: black;
    }

    capacity {
        position:absolute;
        width:100%;
        left:-4px;
        bottom: -4px;
    }


    code {
        display: table-column;
        background-color: inherit !important;
        text-align: center !important;
        vertical-align: middle;
        text-shadow: 0em 0em !important;
    }

    ptr {
        display: inline-block;
        width: 100px;
        background-color: lightskyblue;
    }

    .unsafe {
        position: relative;
        top: -3px;
        border-style: solid;
        border-width: 3px;
        border-color: red;
    }

   sized {
        background-color: cyan;
        display: inline-block;
        width: 100px;
    }


    sub {
        font-size: 50%;
    }
}

